@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.615 2006/03/07 00:40:17 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.616 2006/03/07 04:26:34 codeman Exp $
 
-  7 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
+  6 Mar 2006; Preston Cody <codeman@gentoo.org>
+  src/templates/x86AT:
+  add windows detection code for grub.  untested.
+  
+  6 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/x86ArchitectureTemplate.py:
   bootloader and partitioning external commands log to compile_output.log
   wait for device node to exist before resizing
